New version: advanced log analysis + workflow v2